--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "connect-flash": "^0.1.1",
+    "console-browserify": "^1.1.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "express-validator": "^3.1.2",
     "gulp-install": "^0.6.0",
     "mysql": "^2.11.1",
     "passport": "^0.3.2",
